# pyQt_SSVEP

./: .gitignore  README.md  example.py  pyproject.toml  requirements.txt  ssvep_stimulator.py
